@@ -1,3 +1,8 @@
+2006-02-17  Richard Hult  <richard@imendio.com>
+
+	* src/dh-main.c (main): Check if the options were correct. Fixes
+	bug #328948.
+
 2006-01-21  Richard Hult  <richard@imendio.com>
 
 	* src/bacon-message-connection.c:
